// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider /> horizontalCentered should be rendered properly 1`] = `
<Divider>
  Horizontal centered
</Divider>
`;

exports[`<Divider /> horizontalLeft should be rendered properly 1`] = `
<Divider
  orientation="left"
>
  Horizontal left
</Divider>
`;

exports[`<Divider /> horizontalRight should be rendered properly 1`] = `
<Divider
  orientation="right"
>
  Horizontal right
</Divider>
`;

exports[`<Divider /> vertical should be rendered properly 1`] = `
<div>
  Text
  <UNDEFINED
    orientation="center"
    type="vertical"
  />
  Text
</div>
`;
